--- a/MLcodes/Text_Classification_NB.ipynb
+++ b/MLcodes/Text_Classification_NB.ipynb
@@ -5,9 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2026-02-05T12:24:41.511551Z",
-     "start_time": "2026-02-05T12:24:41.505841Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -19,7 +18,7 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": null
   },
   {
    "metadata": {
