--- a/Machine_learning_taxi.ipynb
+++ b/Machine_learning_taxi.ipynb
@@ -676,9 +676,8 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-11T17:49:36.778458Z",
-     "start_time": "2026-02-11T17:46:58.059888Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -699,18 +698,8 @@
     "print(f\"Two Feature MAE:, {mae_2:.5f}\")"
    ],
    "id": "e9b646cdedf5fa25",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Two Feature Model - MAE:, 1.15936\n",
-      "One feature MAE:, 1.57763\n",
-      "Two Feature MAE:, 1.15936\n"
-     ]
-    }
-   ],
-   "execution_count": 77
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
